--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/PreciousChicken/sqlite-graphql-apollo-server/issues"
   },
-  "homepage": "https://github.com/PreciousChicken/sqlite-graphql-apollo-server#readme"
+  "homepage": "https://github.com/PreciousChicken/sqlite-graphql-apollo-server#readme",
+  "dependencies": {
+    "apollo-server": "^3.8.1",
+    "better-sqlite3": "^7.5.3"
+  }
 }
